obtener todas las movilidades de un colaborador
