# routes/api.php
@@ -37,7 +37,6 @@ Route::group(['middleware' => ['auth:api']], function () {
 Route::get('/colaboradores1/{rut}', 'Colaboradores\Testing');
 Route::get('/colaboradores/import-data', 'Colaboradores\ImportDataController');
 
-
 Route::get('/areas', 'Areas\IndexController');
 Route::post('/areas', 'Areas\CreateProcessController');
 Route::get('/areas/{id}', 'Areas\ShowController');
@@ -71,6 +70,7 @@ Route::get('/colaboradores/{id}', 'Colaboradores\ShowController');
 Route::patch('/colaboradores/{id}', 'Colaboradores\UpdateProcessController');
 Route::post('/colaboradores', 'Colaboradores\CreateProcessController');
 
+Route::get('/colaboradores/{id}/movilidades', 'Colaboradores\Movilidades\IndexController');
 Route::post('/colaboradores/{id}/movilidades', 'Colaboradores\Movilidades\CreateProcessController');
 Route::delete('/colaboradores/{id}/movilidades', 'Colaboradores\Movilidades\DeleteProcessController');
 
